plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.jgp'
version = '0.0.1-SNAPSHOT'

ext {
	querydslVersion = '5.1.0'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.apache.poi:poi:5.5.1'
	implementation 'org.apache.poi:poi-ooxml:5.5.1'
    implementation 'com.github.pjfanning:excel-streaming-reader:5.0.2'
	implementation 'com.google.guava:guava:33.5.0-jre'
	implementation 'com.google.code.gson:gson'
	implementation 'org.apache.commons:commons-lang3:3.20.0'
	implementation 'org.apache.commons:commons-text:1.13.1'
	implementation 'com.googlecode.libphonenumber:libphonenumber:9.0.9'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.1'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	implementation 'org.apache.tika:tika-core:3.0.0'
	implementation 'org.apache.tika:tika-parsers:3.0.0'
	implementation 'com.google.code.findbugs:annotations:3.0.0'
    implementation 'org.cache2k:cache2k-spring:2.6.1.Final'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	implementation 'org.flywaydb:flyway-core:11.1.0'
	implementation 'org.flywaydb:flyway-database-postgresql:11.1.0'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
